--- a/src/web/appsettings.json
+++ b/src/web/appsettings.json
@@ -4,7 +4,7 @@
         "Port": 32768,
         "User": "",
         "Psw": "",
-        "Name": "bom"
+        "Name": "app-core"
     },
 	"Smtp": {
 		"Host":"127.0.0.1",
