--- a/src/web/appsettings.json
+++ b/src/web/appsettings.json
@@ -1,11 +1,14 @@
 ﻿{
-	"Db":{
-    	"Host": "localhost",
-        "Port": 32768,
-        "User": "",
-        "Psw": "",
-        "Name": "app-core"
-    },
+  "Db": [
+    {
+      "Type": "MongoDb",
+      "Host": "localhost",
+      "Port": 32768,
+      "User": "",
+      "Psw": "",
+      "Name": "app-core"
+    }
+  ],
 	"Smtp": {
 		"Host":"127.0.0.1",
 		"Port":21,
