Multi Db configuration

--- a/src/web/appsettings.json
+++ b/src/web/appsettings.json
@@ -1,9 +1,21 @@
 ﻿{
   "Db": [
     {
-      "Type": "MongoDb",
+      "Type": "FileSystem",
+      "Host":  "Files/custom"
+    },
+    {
+      "Type": "Mongo",
       "Host": "localhost",
       "Port": 32768,
+      "User": "",
+      "Psw": "",
+      "Name": "app-core"
+    },
+    {
+      "Type": "SqlServer",
+      "Host": ".",
+      "Port": 1433,
       "User": "",
       "Psw": "",
       "Name": "app-core"
