--- a/src/web/web.csproj
+++ b/src/web/web.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Files\" />
+    <Folder Include="Files\Entity\" />
   </ItemGroup>
 
 </Project>
