IOptionsSnapshot to live reload

--- a/src/web/appsettings.json
+++ b/src/web/appsettings.json
@@ -1,9 +1,5 @@
 ﻿{
-  "Db": [
-    {
-      "Type": "FileSystem",
-      "Host":  "Files/custom"
-    },
+  "DbList": [
     {
       "Type": "Mongo",
       "Host": "localhost",
@@ -11,6 +7,9 @@
       "User": "",
       "Psw": "",
       "Name": "app-core"
+    },
+    {
+      "Type": "FileSystem"
     },
     {
       "Type": "SqlServer",
