--- a/src/web/web.csproj
+++ b/src/web/web.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <Folder Include="Files\Entity\" />
+    <Folder Include="Models\Configuration\" />
   </ItemGroup>
 
 </Project>
