--- a/src/web/appsettings.json
+++ b/src/web/appsettings.json
@@ -1,23 +1,16 @@
 ﻿{
   "DbList": [
     {
+      "Type": "SqlServer",
+      "Connection": "Server=.;Database=app-core;Trusted_Connection=Yes;"
+    },
+    {
       "Type": "Mongo",
-      "Host": "localhost",
-      "Port": 32768,
-      "User": "",
-      "Psw": "",
+      "Connection": "mongodb//localhost:32768",
       "Name": "app-core"
     },
     {
       "Type": "FileSystem"
-    },
-    {
-      "Type": "SqlServer",
-      "Host": ".",
-      "Port": 1433,
-      "User": "",
-      "Psw": "",
-      "Name": "app-core"
     }
   ],
 	"Smtp": {
