--- a/src/core/Dockerfile
+++ b/src/core/Dockerfile
@@ -3,4 +3,4 @@ ARG source
 WORKDIR /app
 EXPOSE 80
 COPY ${source:-obj/Docker/publish} .
-ENTRYPOINT ["dotnet", "web.dll"]
+ENTRYPOINT ["dotnet", "core.dll"]
