--- a/src/core/appsettings.json
+++ b/src/core/appsettings.json
@@ -2,7 +2,8 @@
   "DbList": [
     {
       "Type": "SqlServer",
-      "Connection": "Server=.;Database=app-core;Trusted_Connection=Yes;"
+      "Connection": "Server=.;Database=app-core;Trusted_Connection=Yes;",
+      "Name": "app-core"
     },
     {
       "Type": "Mongo",
@@ -13,10 +14,10 @@
       "Type": "FileSystem"
     }
   ],
-	"Smtp": {
-		"Host":"127.0.0.1",
-		"Port":21,
-		"User":"",
-		"Psw":""
-	}
+  "Smtp": {
+    "Host": "127.0.0.1",
+    "Port": 21,
+    "User": "",
+    "Psw": ""
+  }
 }
