--- a/src/modules/ExtensionBase/ExtensionBase.csproj
+++ b/src/modules/ExtensionBase/ExtensionBase.csproj
@@ -6,8 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="ExtCore.Infrastructure" Version="1.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.1" />
-    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
