--- a/src/modules/ExtensionBase/ExtensionBase.csproj
+++ b/src/modules/ExtensionBase/ExtensionBase.csproj
@@ -2,7 +2,31 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <PackageId>app.core.Extensions.Base</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Massimo Di Paolo</Authors>
+    <Description>Base extension module, derived from ExtCore by Dmitry Sikorsky</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
+    <PackageTags>extension base</PackageTags>
+    <RootNamespace>core.Extensions.Base</RootNamespace>
+    <AssemblyName>ExtensionBase</AssemblyName>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">    
+    <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Debug\netcoreapp1.1\ExtensionBase.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Release\netcoreapp1.1\ExtensionBase.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="Extension.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ExtCore.Infrastructure" Version="1.2.0" />
@@ -11,4 +35,13 @@
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 
+  <Target Name="NugetPack" AfterTargets="Pack">
+    <ItemGroup>
+      <NugetPackages Include="$(MSBuildProjectDirectory)\bin\$(Configuration)\$(PackageId).$(PackageVersion)*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(NugetPackages)" DestinationFolder="F:\Projects\packages-share\_pack" />
+    <Exec Command="F:\Projects\packages-share\nuget delete $(PackageId) $(PackageVersion) -Source F:\Projects\packages-share" ContinueOnError="true" />
+    <Exec Command="F:\Projects\packages-share\nuget add F:\Projects\packages-share\_pack\$(PackageId).$(PackageVersion).nupkg -Source F:\Projects\packages-share" />    
+  </Target>
+  
 </Project>
