--- a/src/modules/Identity/Identity.csproj
+++ b/src/modules/Identity/Identity.csproj
@@ -1,7 +1,40 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <PackageId>app.core.Extensions.Identity</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Massimo Di Paolo</Authors>
+    <Description>IdentityServer4 wrapper: OpenID Connect and OAuth 2.0 Framework for ASP.NET Core.</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
+    <PackageTags>Identity,OAuth2,OAuth,2.0,OpenID,Connect,IdentityServer,IdentityServer4,Security</PackageTags>
+    <RootNamespace>core.Extensions.Identity</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Release\netcoreapp1.1\Identity.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1705;1591</NoWarn>
+    <DocumentationFile>bin\Debug\netcoreapp1.1\Identity.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="app.core.Extensions.Base" Version="1.0.0" />
+    <PackageReference Include="IdentityServer4" Version="1.5.1" />
+  </ItemGroup>
+
+  <Target Name="NugetPack" AfterTargets="Pack">
+    <ItemGroup>
+      <NugetPackages Include="$(MSBuildProjectDirectory)\bin\$(Configuration)\$(PackageId).$(PackageVersion)*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(NugetPackages)" DestinationFolder="F:\Projects\packages-share\_pack" />
+    <Exec Command="F:\Projects\packages-share\nuget delete $(PackageId) $(PackageVersion) -Source F:\Projects\packages-share" ContinueOnError="true" />
+    <Exec Command="F:\Projects\packages-share\nuget add F:\Projects\packages-share\_pack\$(PackageId).$(PackageVersion).nupkg -Source F:\Projects\packages-share" />
+  </Target>
+  
 </Project>
