--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <PackageVersion>1.0.0</PackageVersion>
-    <PackageId>app.core.Extensions.Identity</PackageId>
-    <AssemblyName>app.core.Extensions.Identity</AssemblyName>
+    <PackageId>app.core.Extensions.Message</PackageId>
+    <AssemblyName>app.core.Extensions.Message</AssemblyName>    
     <Authors>Massimo Di Paolo</Authors>
-    <Description>IdentityServer4 wrapper: OpenID Connect and OAuth 2.0 Framework for ASP.NET Core.</Description>
+    <Description>Send/Receive message via email</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>First release</PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-    <PackageTags>Identity,OAuth2,OAuth,2.0,OpenID,Connect,IdentityServer,IdentityServer4,Security</PackageTags>
-    <RootNamespace>core.Extensions.Identity</RootNamespace>
+    <PackageTags>extension message, email, smtp</PackageTags>
+    <RootNamespace>core.Extensions.Message</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,8 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="app.core.Extensions.Base" Version="1.0.0" />
-    <PackageReference Include="IdentityServer4" Version="1.5.1" />
+    <PackageReference Include="app.core.Extensions.Base" Version="1.0.0" />    
   </ItemGroup>
-  
+
 </Project>
