--- a/src/modules/Mvc/Mvc.csproj
+++ b/src/modules/Mvc/Mvc.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <PackageVersion>1.0.0</PackageVersion>
-    <PackageId>app.core.Extensions.StaticFiles</PackageId>
-    <AssemblyName>app.core.Extensions.StaticFiles</AssemblyName>
+    <PackageId>app.core.Extensions.Mvc</PackageId>
+    <AssemblyName>app.core.Extensions.Mvc</AssemblyName>
     <Authors>Massimo Di Paolo</Authors>
-    <Description>This extension enables the web app to serve static files. A physical file provider is used.</Description>    
+    <Description>Mvc support for Web Pages w/Razor</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>    
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-    <PackageTags>static files staticfiles </PackageTags>
-    <RootNamespace>core.Extensions.StaticFiles</RootNamespace>
+    <PackageTags>Mvc, web pages, Razor</PackageTags>
+    <RootNamespace>core.Extensions.Mvc</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -21,8 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="app.core.Extensions.Base" Version="1.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
   </ItemGroup>
 
 </Project>
