--- a/src/modules/StaticFiles/StaticFiles.csproj
+++ b/src/modules/StaticFiles/StaticFiles.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="readme.txt" Pack="true" PackagePath=""></None>
+  </ItemGroup>
+
 </Project>
