--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
   </ItemGroup>
 
 </Project>
