--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="app.core.Extensions.Base" Version="1.0.0" />    
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
+  </ItemGroup>
+
 </Project>
