--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
+  </ItemGroup>
+
 </Project>
