--- a/src/modules/ExtensionBase/ExtensionBase.csproj
+++ b/src/modules/ExtensionBase/ExtensionBase.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>2.0.0</PackageVersion>
     <PackageId>app.core.Extensions.Base</PackageId>
     <AssemblyName>app.core.Extensions.Base</AssemblyName>    
     <Authors>Massimo Di Paolo</Authors>
     <Description>Base extension module, derived from ExtCore by Dmitry Sikorsky</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageReleaseNotes>net.Core 2.0.0</PackageReleaseNotes>
     <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
     <PackageTags>extension base</PackageTags>
     <RootNamespace>core.Extensions.Base</RootNamespace>
@@ -18,6 +18,10 @@
   <PropertyGroup>
     <NoWarn>1701;1702;1705;1591</NoWarn>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <Version>2.0.0</Version>
+    <RepositoryType />
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,9 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExtCore.Infrastructure" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
+    <PackageReference Include="ExtCore.Infrastructure" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
   
