--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageTargetFallback>portable-net45+win8</PackageTargetFallback>    
+    <AssetTargetFallback>portable-net45+win8</AssetTargetFallback>    
   </PropertyGroup>  
   
   <ItemGroup>
