--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Api</PackageId>
+    <AssemblyName>app.core.Extensions.Api</AssemblyName>
+    <RootNamespace>core.Extensions.Api</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
