--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Data.FileSystem</PackageId>
+    <AssemblyName>app.core.Extensions.Data.FileSystem</AssemblyName>
+    <RootNamespace>core.Extensions.Data.FileSystem</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
