--- a/src/modules/Data.Mongo/Data.Mongo.csproj
+++ b/src/modules/Data.Mongo/Data.Mongo.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Data.Mongo</PackageId>
+    <AssemblyName>app.core.Extensions.Data.Mongo</AssemblyName>
+    <RootNamespace>core.Extensions.Data.Mongo</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
