--- a/src/modules/Data.SqlServer/Data.SqlServer.csproj
+++ b/src/modules/Data.SqlServer/Data.SqlServer.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Data.SqlServer</PackageId>
+    <AssemblyName>app.core.Extensions.Data.SqlServer</AssemblyName>
+    <RootNamespace>core.Extensions.Data.SqlServer</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
