--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Data</PackageId>
+    <AssemblyName>app.core.Extensions.Data</AssemblyName>
+    <RootNamespace>core.Extensions.Data</RootNamespace>   
   </PropertyGroup>
 
   <ItemGroup>
