Samples: add Data.FileSystem

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -27,6 +27,9 @@
       ]
     },
     {
+      "Name": "app.core.Extensions.Data.FileSystem"
+    },
+    {
       "Name": "app.core.Extensions.Identity"
     },
     {
