module Cache > Data.Cache

--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -9,8 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cache\Cache.csproj" />
-    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
   </ItemGroup>
 
 </Project>
