--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -36,6 +36,10 @@
         "RedisOptions": {
           "Configuration": "127.0.0.1:6379",
           "InstanceName": "master"
+        },
+        "EntryProfileExpirationInMinutes": {
+          "Fast": 1,
+          "Never": 2880
         }
       }
     },
