--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -41,4 +41,7 @@
     </Folder>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\modules\ExtensionBase\ExtensionBase.csproj" />
+  </ItemGroup>
 </Project>
