--- a/samples/web/app-settings.json
+++ b/samples/web/app-settings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Extensions": {
+  "Modules": {
     // Please keep in mind that you have to change '\' to '/' on Linux-based systems
     "Path": "Extensions"
   }
