--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -1,7 +1,8 @@
 ﻿{
   "Configuration": {
     "Path": "Extensions",
-    "Assemblies": [ 
+    "ShutDownOnChange": false,
+    "Assemblies": [  
       { 
         "Name": "app.core.Extensions.StaticFiles", 
         "Options": [
